cleanup tests: more conventional immutable collections
GitOrigin-RevId: d89404614bd07ed3139d6bae51ecef2ba419e098